# bug-reproduction-timestamp

./: Cargo.toml  package.json
dnas/demo/workdir/: dna.yaml
dnas/demo/zomes/coordinator/posts/: Cargo.toml
dnas/demo/zomes/coordinator/posts/src/: lib.rs
dnas/demo/zomes/coordinator/posts/tests/: test.rs
workdir/: happ.yaml
