[package]
name = "posts"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "posts"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
holochain = { workspace = true, default-features = false, features = ["test_utils"] }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
tokio = "1.33.0"
chrono = "0.4.31"